--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "rich>=14.1.0",
     "textual>=5.3.0",
     "argparse>=1.4.0",
+    "jinja2>=3.1.6",
 ]
 
 [project.optional-dependencies]
