--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ dependencies = [
     "textual>=5.3.0",
     "argparse>=1.4.0",
     "jinja2>=3.1.6",
+    "pydantic>=2.11.7",
+    "openai>=1.101.0",
+    "instructor>=1.10.0",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.5",
+    "pathlib>=1.0.1",
 ]
 
 [project.optional-dependencies]
