creating hte imageset class

--- a/config/config.toml
+++ b/config/config.toml
@@ -1,7 +1,7 @@
 # Image Catalog TUI Configuration
 
 # File tags used for identifying image variants
-file_tags = ["orig", "thumb", "v2", "v3", "v4", "v5", "up2", "up3", "up4", "up6"]
+file_tags = ["orig", "thumb", "v2", "v3", "v4", "v5", "up2", "up3", "up4", "up6", "interview", "raw"]
 
 # Logging configuration
 [logging]
