--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
     "pathlib>=1.0.1",
+    "tomli-w>=1.2.0",
 ]
 
 [project.optional-dependencies]
