--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "requests>=2.32.5",
     "pathlib>=1.0.1",
     "tomli-w>=1.2.0",
+    "flask>=3.1.2",
 ]
 
 [project.optional-dependencies]
@@ -48,3 +49,4 @@ include = [
 
 [project.scripts]
 img-catalog-tui = "img_catalog_tui.main:main"
+web = "img_catalog_tui.flask.flask:main"
