--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -1,3 +1,4 @@
 [folders]
 2025-08-03_tmp = "E:\\fooocus\\images\\new\\2025-08-03_tmp"
 2025-09-02 = "C:\\Users\\bradf\\Downloads\\2025-09-02"
+2024-08-14 = "E:\\fooocus\\images\\new\\2024-08-14"
