--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -2,3 +2,5 @@
 2025-08-03_tmp = "E:\\fooocus\\images\\new\\2025-08-03_tmp"
 2025-09-02 = "C:\\Users\\bradf\\Downloads\\2025-09-02"
 2024-08-14 = "E:\\fooocus\\images\\new\\2024-08-14"
+2024-04-12 = "E:\\fooocus\\images\\new\\2024-04-12"
+2025-08-17 = "E:\\fooocus\\images\\new\\2025-08-17"
