--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -1,6 +1,9 @@
 [folders]
 2025-08-03_tmp = "E:\\fooocus\\images\\new\\2025-08-03_tmp"
-2025-09-02 = "C:\\Users\\bradf\\Downloads\\2025-09-02"
 2024-08-14 = "E:\\fooocus\\images\\new\\2024-08-14"
 2024-04-12 = "E:\\fooocus\\images\\new\\2024-04-12"
 2025-08-17 = "E:\\fooocus\\images\\new\\2025-08-17"
+_Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
+"2024-04-17 - island in space" = "E:\\fooocus\\images\\new\\2024-04-17 - island in space"
+2024-04-18 = "E:\\fooocus\\images\\new\\2024-04-18"
+2024-08-05 = "E:\\fooocus\\images\\new\\2024-08-05"
