--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -7,3 +7,4 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 "2024-04-17 - island in space" = "E:\\fooocus\\images\\new\\2024-04-17 - island in space"
 2024-04-18 = "E:\\fooocus\\images\\new\\2024-04-18"
 2024-08-05 = "E:\\fooocus\\images\\new\\2024-08-05"
+2025-10-06 = "E:\\fooocus\\images\\new\\2025-10-06"
