--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -9,3 +9,7 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 2024-08-05 = "E:\\fooocus\\images\\new\\2024-08-05"
 2025-10-06 = "E:\\fooocus\\images\\new\\2025-10-06"
 2025-10-07 = "E:\\fooocus\\images\\new\\2025-10-07"
+2025-10-08 = "E:\\fooocus\\images\\new\\2025-10-08"
+2025-10-09 = "E:\\fooocus\\images\\new\\2025-10-09"
+2025-10-05 = "E:\\fooocus\\images\\new\\2025-10-05"
+2024-04-11 = "E:\\fooocus\\images\\new\\2024-04-11"
