photopea mockup integratioon

--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -13,3 +13,36 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 2025-10-09 = "E:\\fooocus\\images\\new\\2025-10-09"
 2025-10-05 = "E:\\fooocus\\images\\new\\2025-10-05"
 2024-04-11 = "E:\\fooocus\\images\\new\\2024-04-11"
+2024-04-13 = "E:\\fooocus\\images\\new\\2024-04-13"
+2024-04-14 = "E:\\fooocus\\images\\new\\2024-04-14"
+2024-04-15 = "E:\\fooocus\\images\\new\\2024-04-15"
+2025-10-12 = "E:\\fooocus\\images\\new\\2025-10-12"
+2025-10-11 = "E:\\fooocus\\images\\new\\2025-10-11"
+2025-10-10 = "E:\\fooocus\\images\\new\\2025-10-10"
+"2024-04-15 - Animal" = "E:\\fooocus\\images\\new\\2024-04-15 - Animal"
+2024-04-17 = "E:\\fooocus\\images\\new\\2024-04-17"
+"mj 2024-09-20" = "E:\\fooocus\\images\\new\\mj 2024-09-20"
+"mj 2025-05-08" = "E:\\fooocus\\images\\new\\mj 2025-05-08"
+"2024-04-08 - Sticker Octopus" = "E:\\fooocus\\images\\new\\2024-04-08 - Sticker Octopus"
+2024-03-25 = "E:\\fooocus\\images\\new\\2024-03-25"
+2025-10-20 = "E:\\fooocus\\images\\new\\2025-10-20"
+2025-10-19 = "E:\\fooocus\\images\\new\\2025-10-19"
+2025-10-18 = "E:\\fooocus\\images\\new\\2025-10-18"
+02_keep = "E:\\fooocus\\images\\02_keep"
+2025-10-22 = "E:\\fooocus\\images\\new\\2025-10-22"
+2025-10-21 = "E:\\fooocus\\images\\new\\2025-10-21"
+2025-10-17 = "E:\\fooocus\\images\\new\\2025-10-17"
+2025-10-16 = "E:\\fooocus\\images\\new\\2025-10-16"
+2025-10-23 = "E:\\fooocus\\images\\new\\2025-10-23"
+"mj 2024-08-30" = "E:\\fooocus\\images\\new\\mj 2024-08-30"
+"mj 2023-07 beautiful_unicorn_coloring_page" = "E:\\fooocus\\images\\new\\mj 2023-07 beautiful_unicorn_coloring_page"
+"mj 2023-07 black_bird_perched_on_a_large_tall_grass" = "E:\\fooocus\\images\\new\\mj 2023-07 black_bird_perched_on_a_large_tall_grass"
+"mj 2023-06" = "E:\\fooocus\\images\\new\\mj 2023-06"
+"mj 2023-07" = "E:\\fooocus\\images\\new\\mj 2023-07"
+"mj 2025-05-07" = "E:\\fooocus\\images\\new\\mj 2025-05-07"
+"mj 2024-09-25" = "E:\\fooocus\\images\\new\\mj 2024-09-25"
+"mj 2024-09-24" = "E:\\fooocus\\images\\new\\mj 2024-09-24"
+"mj 2024-09-26" = "E:\\fooocus\\images\\new\\mj 2024-09-26"
+"mj 2024-09-18" = "E:\\fooocus\\images\\new\\mj 2024-09-18"
+"mj 2024-09-17" = "E:\\fooocus\\images\\new\\mj 2024-09-17"
+"mj 2025-05-06" = "E:\\fooocus\\images\\new\\mj 2025-05-06"
