--- a/config/config.toml
+++ b/config/config.toml
@@ -2,7 +2,7 @@
 
 # File tags used for identifying image variants
 file_tags = ["orig", "thumb", "v2", "v3", "v4", "v5", "up2", "up3", "up4", "up6", "interview", "raw", "watermark"]
-img_file_ext = ["png", "jpg", "jpeg", "bmp"]
+img_file_ext = ["png", "jpg", "jpeg", "bmp", "svg"]
 
 # selection options
 status = ["new", "keep", "edit", "working", "posted", "archive"]
@@ -68,9 +68,8 @@ description = "Tag Images with Good For tags."
 
 [mockups]
 
-photoshop_exe = ""
-mockups_base_folder = "c:/mockups/"
-params_file = "params.json"
+mockups_base_folder = "C:/Users/bradf/Downloads/_Mockups"
+smart_object_layer_name = "Artwork"
 
 [mockups.folders]
-poster_vertical = "posters/vertical"
+poster_vertical = "_poster/_vertical"
