--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -46,3 +46,4 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 "mj 2024-09-18" = "E:\\fooocus\\images\\new\\mj 2024-09-18"
 "mj 2024-09-17" = "E:\\fooocus\\images\\new\\mj 2024-09-17"
 "mj 2025-05-06" = "E:\\fooocus\\images\\new\\mj 2025-05-06"
+2025-10-15 = "E:\\fooocus\\images\\new\\2025-10-15"
