--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -48,3 +48,4 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 "mj 2025-05-06" = "E:\\fooocus\\images\\new\\mj 2025-05-06"
 2025-10-15 = "E:\\fooocus\\images\\new\\2025-10-15"
 03_edit = "E:\\fooocus\\images\\03_edit"
+2025-11-07 = "E:\\fooocus\\images\\new\\2025-11-07"
