Enhance configuration and folder management
- Added storage backend configuration to `config.toml` for SQLite database path.
- Updated `Folders` class to accept a `Config` object for improved initialization.
- Refactored multiple instances in the codebase to utilize the new `Folders` initialization.
- Introduced a new API endpoint for searching imagesets, with a placeholder for future implementation.
- Updated folder handling in various views to ensure consistent use of the `Folders` class with configuration.

This commit improves the overall structure and prepares for future database integration.

--- a/config/config.toml
+++ b/config/config.toml
@@ -41,6 +41,12 @@ templates_dir = "config/templates"
 menu_config = "config/menu.toml"
 watermark_file = "C:/Users/bradf/Downloads/Jackrabbit Watermark.png"
 
+# Storage backend configuration
+[storage]
+
+# SQLite database path (only used if backend is "sqlite" or "dual")
+db_path = "img_catalog_tui/db/catalog.db"
+
 # Review presets - predefined combinations of states, review_type, and options
 [review_presets]
 
