--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -49,3 +49,5 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 2025-10-15 = "E:\\fooocus\\images\\new\\2025-10-15"
 03_edit = "E:\\fooocus\\images\\03_edit"
 2025-11-07 = "E:\\fooocus\\images\\new\\2025-11-07"
+04_working = "E:\\fooocus\\images\\04_working"
+2025-11-08 = "E:\\fooocus\\images\\new\\2025-11-08"
