Refactor image synchronization logic and update TOML configuration
- Adjusted the Imageset class to prevent unnecessary database synchronization during initialization.
- Updated comments for clarity regarding synchronization behavior.
- Added a new entry to the folders.toml for better organization of image sets.

--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -51,3 +51,4 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 2025-11-07 = "E:\\fooocus\\images\\new\\2025-11-07"
 04_working = "E:\\fooocus\\images\\04_working"
 2025-11-08 = "E:\\fooocus\\images\\new\\2025-11-08"
+"mj 2024-09-27" = "E:\\fooocus\\images\\new\\mj 2024-09-27"
