--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -52,3 +52,12 @@ _Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 04_working = "E:\\fooocus\\images\\04_working"
 2025-11-08 = "E:\\fooocus\\images\\new\\2025-11-08"
 "mj 2024-09-27" = "E:\\fooocus\\images\\new\\mj 2024-09-27"
+05_posted = "E:\\Dropbox\\Biz\\05_posted"
+2024-02-21 = "E:\\fooocus\\images\\new\\2024-02-21"
+_Stage4 = "E:\\Dropbox\\Biz\\Staging\\_Stage4"
+2025-11-25 = "E:\\fooocus\\images\\new\\2025-11-25"
+2025-11-06 = "E:\\fooocus\\images\\new\\2025-11-06"
+2025-11-04 = "E:\\fooocus\\images\\new\\2025-11-04"
+2025-10-14 = "E:\\fooocus\\images\\new\\2025-10-14"
+2024-03 = "E:\\fooocus\\images\\new\\2024-03"
+2024-07-21 = "E:\\fooocus\\images\\new\\2024-07-21"
