Enhance logging and configuration management
- Added 'displate' to the 'posted_to' list in config.toml for expanded posting options.
- Improved logging setup in logger.py with a new ProjectLogger class for better configuration and management.
- Enhanced error handling in imageset.py when setting status in the TOML file.
- Updated imageset_edit.html to provide user feedback during form submission and improve the overall user experience.

--- a/config/config.toml
+++ b/config/config.toml
@@ -9,7 +9,7 @@ status = ["new", "keep", "edit", "working", "posted", "archive"]
 edits = ["creative", "photoshop", "rmbg", "up", "vector"]
 needs = ["orig", "thumbnail", "interview", "mockups"]
 good_for = ["stock", "rb", "poster", "sticker"]
-posted_to = ["stock", "rb", "tp", "faa", "etsy", "printify"]
+posted_to = ["stock", "rb", "tp", "faa", "etsy", "printify", "displate"]
 review_types = ["status", "edits", "needs", "good_for", "posted_to"]
 
 
