--- a/img_catalog_tui/db/folders.toml
+++ b/img_catalog_tui/db/folders.toml
@@ -1,63 +1,65 @@
 [folders]
-2025-08-03_tmp = "E:\\fooocus\\images\\new\\2025-08-03_tmp"
-2024-08-14 = "E:\\fooocus\\images\\new\\2024-08-14"
+02_keep = "E:\\fooocus\\images\\02_keep"
+03_edit = "E:\\fooocus\\images\\03_edit"
+04_working = "E:\\fooocus\\images\\04_working"
+05_posted = "E:\\Dropbox\\Biz\\05_posted"
+2024-02-21 = "E:\\fooocus\\images\\new\\2024-02-21"
+2024-03 = "E:\\fooocus\\images\\new\\2024-03"
+2024-03-21 = "E:\\fooocus\\images\\new\\2024-03-21"
+"2024-04-08 - Sticker Octopus" = "E:\\fooocus\\images\\new\\2024-04-08 - Sticker Octopus"
+2024-04-11 = "E:\\fooocus\\images\\new\\2024-04-11"
 2024-04-12 = "E:\\fooocus\\images\\new\\2024-04-12"
-2025-08-17 = "E:\\fooocus\\images\\new\\2025-08-17"
-_Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
+2024-04-13 = "E:\\fooocus\\images\\new\\2024-04-13"
+2024-04-14 = "E:\\fooocus\\images\\new\\2024-04-14"
+2024-04-15 = "E:\\fooocus\\images\\new\\2024-04-15"
+"2024-04-15 - Animal" = "E:\\fooocus\\images\\new\\2024-04-15 - Animal"
+2024-04-17 = "E:\\fooocus\\images\\new\\2024-04-17"
 "2024-04-17 - island in space" = "E:\\fooocus\\images\\new\\2024-04-17 - island in space"
 2024-04-18 = "E:\\fooocus\\images\\new\\2024-04-18"
+2024-07 = "E:\\fooocus\\images\\new\\2024-07"
 2024-08-05 = "E:\\fooocus\\images\\new\\2024-08-05"
+2024-08-14 = "E:\\fooocus\\images\\new\\2024-08-14"
+2025-08-03_tmp = "E:\\fooocus\\images\\new\\2025-08-03_tmp"
+2025-08-17 = "E:\\fooocus\\images\\new\\2025-08-17"
+2025-10-05 = "E:\\fooocus\\images\\new\\2025-10-05"
 2025-10-06 = "E:\\fooocus\\images\\new\\2025-10-06"
 2025-10-07 = "E:\\fooocus\\images\\new\\2025-10-07"
 2025-10-08 = "E:\\fooocus\\images\\new\\2025-10-08"
 2025-10-09 = "E:\\fooocus\\images\\new\\2025-10-09"
-2025-10-05 = "E:\\fooocus\\images\\new\\2025-10-05"
-2024-04-11 = "E:\\fooocus\\images\\new\\2024-04-11"
-2024-04-13 = "E:\\fooocus\\images\\new\\2024-04-13"
-2024-04-14 = "E:\\fooocus\\images\\new\\2024-04-14"
-2024-04-15 = "E:\\fooocus\\images\\new\\2024-04-15"
-2025-10-12 = "E:\\fooocus\\images\\new\\2025-10-12"
-2025-10-11 = "E:\\fooocus\\images\\new\\2025-10-11"
 2025-10-10 = "E:\\fooocus\\images\\new\\2025-10-10"
-"2024-04-15 - Animal" = "E:\\fooocus\\images\\new\\2024-04-15 - Animal"
-2024-04-17 = "E:\\fooocus\\images\\new\\2024-04-17"
-"mj 2024-09-20" = "E:\\fooocus\\images\\new\\mj 2024-09-20"
-"mj 2025-05-08" = "E:\\fooocus\\images\\new\\mj 2025-05-08"
-"2024-04-08 - Sticker Octopus" = "E:\\fooocus\\images\\new\\2024-04-08 - Sticker Octopus"
-2024-03-25 = "E:\\fooocus\\images\\new\\2024-03-25"
-2025-10-20 = "E:\\fooocus\\images\\new\\2025-10-20"
-2025-10-19 = "E:\\fooocus\\images\\new\\2025-10-19"
-2025-10-18 = "E:\\fooocus\\images\\new\\2025-10-18"
-02_keep = "E:\\fooocus\\images\\02_keep"
-2025-10-22 = "E:\\fooocus\\images\\new\\2025-10-22"
-2025-10-21 = "E:\\fooocus\\images\\new\\2025-10-21"
-2025-10-17 = "E:\\fooocus\\images\\new\\2025-10-17"
+2025-10-11 = "E:\\fooocus\\images\\new\\2025-10-11"
+2025-10-12 = "E:\\fooocus\\images\\new\\2025-10-12"
+2025-10-14 = "E:\\fooocus\\images\\new\\2025-10-14"
+2025-10-15 = "E:\\fooocus\\images\\new\\2025-10-15"
 2025-10-16 = "E:\\fooocus\\images\\new\\2025-10-16"
+2025-10-17 = "E:\\fooocus\\images\\new\\2025-10-17"
+2025-10-18 = "E:\\fooocus\\images\\new\\2025-10-18"
+2025-10-19 = "E:\\fooocus\\images\\new\\2025-10-19"
+2025-10-20 = "E:\\fooocus\\images\\new\\2025-10-20"
+2025-10-21 = "E:\\fooocus\\images\\new\\2025-10-21"
+2025-10-22 = "E:\\fooocus\\images\\new\\2025-10-22"
 2025-10-23 = "E:\\fooocus\\images\\new\\2025-10-23"
-"mj 2024-08-30" = "E:\\fooocus\\images\\new\\mj 2024-08-30"
-"mj 2023-07 beautiful_unicorn_coloring_page" = "E:\\fooocus\\images\\new\\mj 2023-07 beautiful_unicorn_coloring_page"
-"mj 2023-07 black_bird_perched_on_a_large_tall_grass" = "E:\\fooocus\\images\\new\\mj 2023-07 black_bird_perched_on_a_large_tall_grass"
+2025-11-04 = "E:\\fooocus\\images\\new\\2025-11-04"
+2025-11-06 = "E:\\fooocus\\images\\new\\2025-11-06"
+2025-11-07 = "E:\\fooocus\\images\\new\\2025-11-07"
+2025-11-08 = "E:\\fooocus\\images\\new\\2025-11-08"
+2025-11-25 = "E:\\fooocus\\images\\new\\2025-11-25"
+Staging = "E:\\fooocus\\images\\Staging"
+_Imagesets = "C:\\Users\\bradf\\Downloads\\_Imagesets"
 "mj 2023-06" = "E:\\fooocus\\images\\new\\mj 2023-06"
 "mj 2023-07" = "E:\\fooocus\\images\\new\\mj 2023-07"
-"mj 2025-05-07" = "E:\\fooocus\\images\\new\\mj 2025-05-07"
-"mj 2024-09-25" = "E:\\fooocus\\images\\new\\mj 2024-09-25"
-"mj 2024-09-24" = "E:\\fooocus\\images\\new\\mj 2024-09-24"
-"mj 2024-09-26" = "E:\\fooocus\\images\\new\\mj 2024-09-26"
-"mj 2024-09-18" = "E:\\fooocus\\images\\new\\mj 2024-09-18"
+"mj 2023-07 beautiful_unicorn_coloring_page" = "E:\\fooocus\\images\\new\\mj 2023-07 beautiful_unicorn_coloring_page"
+"mj 2023-07 black_bird_perched_on_a_large_tall_grass" = "E:\\fooocus\\images\\new\\mj 2023-07 black_bird_perched_on_a_large_tall_grass"
+"mj 2024-08-30" = "E:\\fooocus\\images\\new\\mj 2024-08-30"
 "mj 2024-09-17" = "E:\\fooocus\\images\\new\\mj 2024-09-17"
-"mj 2025-05-06" = "E:\\fooocus\\images\\new\\mj 2025-05-06"
-2025-10-15 = "E:\\fooocus\\images\\new\\2025-10-15"
-03_edit = "E:\\fooocus\\images\\03_edit"
-2025-11-07 = "E:\\fooocus\\images\\new\\2025-11-07"
-04_working = "E:\\fooocus\\images\\04_working"
-2025-11-08 = "E:\\fooocus\\images\\new\\2025-11-08"
+"mj 2024-09-18" = "E:\\fooocus\\images\\new\\mj 2024-09-18"
+"mj 2024-09-20" = "E:\\fooocus\\images\\new\\mj 2024-09-20"
+"mj 2024-09-24" = "E:\\fooocus\\images\\new\\mj 2024-09-24"
+"mj 2024-09-25" = "E:\\fooocus\\images\\new\\mj 2024-09-25"
+"mj 2024-09-26" = "E:\\fooocus\\images\\new\\mj 2024-09-26"
 "mj 2024-09-27" = "E:\\fooocus\\images\\new\\mj 2024-09-27"
-05_posted = "E:\\Dropbox\\Biz\\05_posted"
-2024-02-21 = "E:\\fooocus\\images\\new\\2024-02-21"
-2025-11-25 = "E:\\fooocus\\images\\new\\2025-11-25"
-2025-11-06 = "E:\\fooocus\\images\\new\\2025-11-06"
-2025-11-04 = "E:\\fooocus\\images\\new\\2025-11-04"
-2025-10-14 = "E:\\fooocus\\images\\new\\2025-10-14"
-2024-03 = "E:\\fooocus\\images\\new\\2024-03"
-2024-07-21 = "E:\\fooocus\\images\\new\\2024-07-21"
-Staging = "E:\\fooocus\\images\\Staging"
+"mj 2025-05-06" = "E:\\fooocus\\images\\new\\mj 2025-05-06"
+"mj 2025-05-07" = "E:\\fooocus\\images\\new\\mj 2025-05-07"
+"mj 2025-05-08" = "E:\\fooocus\\images\\new\\mj 2025-05-08"
+source_folder = "C:\\Users\\bradf\\AppData\\Local\\Temp\\test_move_i112b_kr\\source_folder"
+target_folder = "C:\\Users\\bradf\\AppData\\Local\\Temp\\test_move_i112b_kr\\target_folder"
